# Flask-Basic-App

./: Makefile  README.md  alembic.ini  docker-compose.yml  env.py  main.py  pyproject.toml  run.py
app/: __init__.py  api.py
celery_app/: __init__.py  queue_logger.py  tasks.py
configs/: celeryconfig.py
database/: __init__.py  models.py
migrations/: env.py
migrations/versions/: 1bf3dd04d67f_first_migration.py  7a07661c9453_make_name_not_unique.py  b511f5b91ec9_first_migration.py  bd2330bfbb97_first_migration.py
scripts/: __init__.py  db_scripts.py
src/celery_app/: __init__.py  queue_logger.py  tasks.py
src/database/: __init__.py  models.py  user_repo.py  users.py
src/flask_server/: __init__.py
src/routes/: api_routes.py
src/server/: __init__.py
src/service/: user_service.py
src/services/: user_service.py
src/validations/: helper.py
src/validations/user/: user_schema.py  user_validation.py
tests/: conftest.py
tests/database/: test_user_repo.py  test_users.py
tests/service/: test_user_service.py
utils/: helper.py
