[project]
name = "flask-basic-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "celery>=5.4.0",
    "flask>=3.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.38",
]
