[project]
name = "flask-basic-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "mypy>=1.15.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-utils>=0.41.2",
]


[tool.mypy]
strict = true

# Disable multiple specific error codes
disable_error_code = "arg-type, assignment, misc, import-untyped, import-not-found"
